# maze-algorithms

./: Cargo.toml
src/: astar.rs  direction.rs  input.rs  main.rs  maze.rs  renderer.rs
src/algorithms/: dfs.rs  eller.rs  growing_tree.rs  kruskal.rs  mod.rs  prim.rs  recursive_division.rs  sidewinder.rs
src/render/: gpu_types.rs  gui.rs  mod.rs  rect.wgsl  state.rs
