[package]
name = "maze-algorithms"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "*", features = ["vulkan-portability"] }
egui = "0.31.0"
egui-wgpu = { version = "0.31.0", features = ["winit"] }
egui-winit = "0.31.0"
winit = "0.30.8"

pollster = "0.4.0"
glam = { version = "0.30.0", features = ["bytemuck"] }
bytemuck = "1.21.0"
once_cell = "1.20.3"
rand = "0.9.0"
indexmap = "2.7.1"
rustc-hash = "2.1.1"
